src/landing/footer.css
.footer-main {
    text-align: center;
    padding-right: 1.5rem;
    padding-left: 1.5rem;
    background: #005F94;
}

.footer-wrap {
    padding: 5px 0 5px 0;
}


.made-in-india-para, .ministry-of-housing-para {
    color: #FFFFFF;
    font-size: 14px !important;
    margin: 0;
    font-weight: 400;
    line-height: 23px;
    text-align: center;
}

.made-in-india-para a {
    color: #FFFFFF;
    text-decoration: none;
    font-style: normal;
    font-weight: 400;
    /* font-size: 1.3888888888888888vw !important; */
    line-height: 23px;
    text-align: center;
}

/* Footer upper section */
.footer-upper-section {
    /* margin: 70px auto 0 auto; */
    background-color: #fff;
padding: 70px 36px;
}

.footer-upper-section p {
    font-style: normal;
    font-weight: 400;
    font-size: 1.25vw;
    line-height: 150%;
    margin-bottom: 0;
    margin-top: 20px;
    color:  #677171;
}
.footer-upper-section h4 {
    font-style: normal;
    font-weight: 700;
    font-size: 1.3888888888888888vw;
    line-height: 23px;
    color: #3B3B3B;
    margin-top: 10px;
}

.footer-upper-section ul {
        list-style: none;
        padding-left: 10px !important;
        /* font-family: "Lora-Regular"; */
        font-style: normal;
        font-weight: 400;
        /* font-size: 1.3888888888888888vw; */
        line-height: 23px;
        color: #677171;
        padding-top: 60px;
}

.footer-upper-section ul li {
    padding: 5px 14px;
}

.footer-upper-section ul li:first-child {
    color: #000000;
}

.social-icons {
    padding-top: 0 !important;
    display: inline-flex;
    margin-top: 0;
}

.social-icons li a {
    display: inline-block;
    color: #fff!important;
    border: 1px solid #1976d2;
    background-color: #1976d2;
    height: 30px;
    line-height: 40px;
    width: 30px;
    text-align: center;
    border-radius: 50%;
}

.social-icons li a svg{
    font-size: 20px !important;
}


@media only screen and (max-width: 600px) {

    .footer-upper-section ul {
        padding-top: 0 !important;
        margin-top: 0 !important;
        margin-bottom: 0 !important;
        font-size: 14px !important;
    }

    .footer-upper-section ul li {
        padding: 6px;
    }
}

